Bug 142242 - Forename in User Data get imported with a trailing space to the document's properties
Summary: Forename in User Data get imported with a trailing space to the document's pr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.3.2 release
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-12 17:11 UTC by soongrazer
Modified: 2022-02-02 15:00 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description soongrazer 2021-05-12 17:11:32 UTC
Description:
I set only the Forename property in User Data, no surname and initials. 

When I Reset Properties in a document's File > Properties..., the name contains a trailing space. This can be known by selecting the name and inserting the First Author field. 

This seems to happen only when the surname is empty.

Steps to Reproduce:
1. Set just forename in User Data.
2. Open a document, go to File > Properties... and click Reset Properties.
3. Select the line "Created:" to see the trailing space.

Actual Results:
A trailing space is included in the name.

Expected Results:
The name should be only the forename set in User Data without extra spaces.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.3.2 / LibreOffice Community
Build: 47f78053abe362b9384784d31a6e56f8511eb1c1
User Interface: UI render: default; VCL: osx
Locale: en-GB(en_GB.UTF-8); UI: en-GB
Comment 1 psidiumcode 2021-05-17 19:03:11 UTC
I could reproduce it. 

Version: 7.0.5.2
Build ID: 64390860c6cd0aca4beafafcfd84613dd9dfb63a
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: b137ff671f25a605334083c0f87ada84eaa0fcf2
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2021-06-13 11:19:36 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/07021596acb3d104ba129d371b1ae0b79f67a6a4

tdf#142242 Forename imported with trailing space

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.