tdf#142242 Forename imported with trailing space

Fix the case where there is only a name, and no surname.

Change-Id: If11078364924c8332b113e5650e7ea2b262a357a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117080
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>